PDFBOX-5660: partial revert
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/branches/3.0@1932634 13f79535-47bb-0310-9956-ffa450edef68