@@ -19,6 +19,7 @@ package org.apache.pdfbox.debugger.fontencodingpane;
 import org.apache.pdfbox.cos.COSDictionary;
 import org.apache.pdfbox.cos.COSName;
 import org.apache.pdfbox.cos.COSStream;
+import org.apache.pdfbox.io.IOUtils;
 import org.apache.pdfbox.pdmodel.font.PDCIDFont;
 import org.apache.pdfbox.pdmodel.font.PDFont;
 import org.apache.pdfbox.pdmodel.font.PDType0Font;
@@ -116,7 +117,7 @@ class Type0Font extends FontPane
             byte[] mapAsBytes;
             try (InputStream is = stream.createInputStream())
             {
-                mapAsBytes = is.readAllBytes();
+                mapAsBytes = IOUtils.toByteArray(is);
             }
             int numberOfInts = mapAsBytes.length / 2;
             cid2gid = new Object[numberOfInts][4];
